--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Melissa Sattler <melissa.i.sattler@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7"
   }
 }
